common/istio-1-9/istio-install/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  labels:
    release: istio
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      # TLS cert either mounted
      #privateKey: /etc/istio/ingressgateway-certs/tls.key
      #serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      # ... or lives in this secret
      credentialName: istio-ingressgateway-certs
      # These seem unnecessary when provisioning from a secret
      #privateKey: sds
      #serverCertificate: sds
